
/**
 * Follow this process to write e2e tests for the CLI project:
 *
 * 1. Test if all the necessary mocks for your tests already exist.
 *    In mock mode, run the command you want to test with the same arguments
 *    and parameters exactly as you want to test it, for example:
 *
 *    $ FRODO_MOCK=1 frodo conn save https://openam-frodo-dev.forgeblocks.com/am volker.scheuber@forgerock.com Sup3rS3cr3t!
 *
 *    If your command completes without errors and with the expected results,
 *    all the required mocks already exist and you are good to write your
 *    test and skip to step #4.
 *
 *    If, however, your command fails and you see errors like the one below,
 *    you know you need to record the mock responses first:
 *
 *    [Polly] [adapter:node-http] Recording for the following request is not found and `recordIfMissing` is `false`.
 *
 * 2. Record mock responses for your exact command.
 *    In mock record mode, run the command you want to test with the same arguments
 *    and parameters exactly as you want to test it, for example:
 *
 *    $ FRODO_MOCK=record frodo conn save https://openam-frodo-dev.forgeblocks.com/am volker.scheuber@forgerock.com Sup3rS3cr3t!
 *
 *    Wait until you see all the Polly instances (mock recording adapters) have
 *    shutdown before you try to run step #1 again.
 *    Messages like these indicate mock recording adapters shutting down:
 *
 *    Polly instance 'conn/4' stopping in 3s...
 *    Polly instance 'conn/4' stopping in 2s...
 *    Polly instance 'conn/save/3' stopping in 3s...
 *    Polly instance 'conn/4' stopping in 1s...
 *    Polly instance 'conn/save/3' stopping in 2s...
 *    Polly instance 'conn/4' stopped.
 *    Polly instance 'conn/save/3' stopping in 1s...
 *    Polly instance 'conn/save/3' stopped.
 *
 * 3. Validate your freshly recorded mock responses are complete and working.
 *    Re-run the exact command you want to test in mock mode (see step #1).
 *
 * 4. Write your test.
 *    Make sure to use the exact command including number of arguments and params.
 *
 * 5. Commit both your test and your new recordings to the repository.
 *    Your tests are likely going to reside outside the frodo-lib project but
 *    the recordings must be committed to the frodo-lib project.
 */

/*
FRODO_MOCK=record FRODO_NO_CACHE=1 FRODO_HOST=https://openam-frodo-dev.forgeblocks.com/am frodo config-manager pull raw -D configManagerExportRawDir0 -f test/e2e/fr-config-manager-pull-config/raw.json
FRODO_MOCK=record FRODO_NO_CACHE=1 FRODO_HOST=https://openam-frodo-dev.forgeblocks.com/am frodo config-manager pull raw -D configManagerExportRawDir1 -p /environment/release
FRODO_MOCK=record FRODO_NO_CACHE=1 FRODO_HOST=https://openam-frodo-dev.forgeblocks.com/am frodo config-manager pull raw -of test/e2e/fr-config-manager-pull-config/raw.json
FRODO_MOCK=record FRODO_NO_CACHE=1 FRODO_HOST=https://openam-frodo-dev.forgeblocks.com/am frodo config-manager pull raw -D configManagerExportRawDir2 -xf test/e2e/fr-config-manager-pull-config/raw.json
FRODO_MOCK=record FRODO_NO_CACHE=1 FRODO_HOST=https://openam-frodo-dev.forgeblocks.com/am frodo config-manager pull raw -xof test/e2e/fr-config-manager-pull-config/raw.json
FRODO_MOCK=record FRODO_NO_CACHE=1 FRODO_HOST=https://openam-frodo-dev.forgeblocks.com/am frodo config-manager pull raw -xop /environment/release
*/
import { getEnv, testExport, testSuccess } from './utils/TestUtils';
import { connection as c } from './utils/TestConfig';

process.env['FRODO_MOCK'] = '1';
process.env['FRODO_CONNECTION_PROFILES_PATH'] =
    './test/e2e/env/Connections.json';
const env = getEnv(c);

const configFile = 'test/e2e/fr-config-manager-pull-config/raw.json';

describe('frodo config-manager pull raw', () => {
    test('"frodo config-manager pull raw -D configManagerExportRawDir0 -f test/e2e/fr-config-manager-pull-config/raw.json": should export all the configs in the provided json file in fr-config manager style.', async () => {
        const dirName = 'configManagerExportRawDir0';
        const CMD = `frodo config-manager pull raw -D ${dirName} -f ${configFile}`;
        await testExport(CMD, env, undefined, undefined, dirName, false);
    });
    test('"frodo config-manager pull raw -D configManagerExportRawDir1 -p /environment/release": should export the configuration at the specified API path in fr-config-manager format.', async () => {
        const dirName = 'configManagerExportRawDir1';
        const CMD = `frodo config-manager pull raw -D ${dirName} -p /environment/release `;
        await testExport(CMD, env, undefined, undefined, dirName, false);
    });
    test('"frodo config-manager pull raw -of test/e2e/fr-config-manager-pull-config/raw.json": should output the configurations listed in the JSON file to stdout in fr-config-manager format.', async () => {
        const CMD = `frodo config-manager pull raw -of ${configFile}`;
        await testSuccess(CMD, env);
    });
    test('"frodo config-manager pull raw -D configManagerExportRawDir2 -xf test/e2e/fr-config-manager-pull-config/raw.json": should export all configurations listed in the JSON file in fr-config-manager format, preserving any push API versions.', async () => {
        const dirName = 'configManagerExportRawDir2';
        const CMD = `frodo config-manager pull raw -D ${dirName} -xf ${configFile}`;
        await testExport(CMD, env, undefined, undefined, dirName, false);
    });
    test('"frodo config-manager pull raw -xof test/e2e/fr-config-manager-pull-config/raw.json": should output all configurations listed in the JSON file to stdout in fr-config-manager format, preserving any push API versions.', async () => {
        const CMD = `frodo config-manager pull raw -xof ${configFile}`;
        await testSuccess(CMD, env);
    });
    test('"frodo config-manager pull raw -xop /environment/release": should output the configuration at the specified API path to stdout in fr-config-manager format.', async () => {
        const CMD = `frodo config-manager pull raw -xop /environment/release`;
        await testSuccess(CMD, env);
    });
});
